--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.works {
+  padding: 20px;
+  display: flexbox;
+}
+
+.media-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  list-style: none;
+  padding: 20;
+  margin: 20;
+}
+
+.media-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.media-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.media-item h3, .media-item p {
+  display: none;
+}
