--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column; /* Coloca los elementos en columna */
+  align-items: flex-start; /* Alinea los elementos al inicio del contenedor */
+  padding: 20px;
+  background-color: #ffffff; /* Ajusta el color de fondo si es necesario */
 }
 
-.App-link {
-  color: #61dafb;
+.header-top {
+  display: flex;
+  justify-content: space-between; /* Distribuye espacio entre el h1 y el h2 */
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-title {
+  color:#ff0000;
+  font-size: 2em; /* Ajusta el tamaño de la fuente si es necesario */
+  text-align: left;
+  margin: 0;
+  line-height: 0.9; /* Ajusta el espacio entre las líneas si es necesario */
+}
+
+.sello {
+  color: #ff0000;
+  font-size: 1.5em; /* Ajusta el tamaño de la fuente si es necesario */
+  text-align: right;
+  margin: 0;
+  line-height: 0.9; /* Ajusta el espacio entre las líneas si es necesario */
+}
+
+.header-nav {
+  margin-top: 10px; /* Añade espacio entre el h1 y la navegación */
+}
+
+.header-nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 20px; /* Ajusta el espacio entre los enlaces del menú */
+}
+
+.header-nav ul li {
+  display: inline;
+}
+
+.header-nav ul li a {
+  text-decoration: none;
+  color: #ff0000; /* Ajusta el color del texto si es necesario */
+  font-size: 1em; /* Ajusta el tamaño de la fuente si es necesario */
+}
+
+.header-nav ul li a:hover {
+  text-decoration: underline;
+}
+.works {
+  padding: 20px;
+  display: flexbox;
+}
+
+.media-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  list-style: none;
+  padding: 20;
+  margin: 20;
+}
+
+.media-item {
+  position: relative;
+  overflow: hidden;
+}
+
+.media-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+.media-item h3, .media-item p {
+  display: none;
+}
+.mail{
+  color: #ff0000;
+  font-size: 3.5em; /* Ajusta el tamaño de la fuente si es necesario */
+  text-align: center;
+  margin: 0;
+
 }
